
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_short ;
struct in_addr {int dummy; } ;
struct sockaddr_in {struct in_addr sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr_list; } ;
typedef int sa ;


 int AF_INET ;
 int SOCK_STREAM ;
 int bye (char*,int ) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int die (char*) ;
 struct hostent* gethostbyname (char*) ;
 int h_errno ;
 int hstrerror (int ) ;
 int htons (int ) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int socket (int ,int ,int ) ;

int conn(char *host, u_short port)
{
    int sock = 0;
    struct hostent *hp;
    struct sockaddr_in sa;

    memset(&sa, 0, sizeof(sa));

    hp = gethostbyname(host);
    if (hp == ((void*)0)) {
     bye("gethostbyname failed with error %s", hstrerror(h_errno));
    }
    sa.sin_family = AF_INET;
    sa.sin_port = htons(port);
    sa.sin_addr = **((struct in_addr **) hp->h_addr_list);

    sock = socket(AF_INET, SOCK_STREAM, 0);
    if (sock < 0)
     die("socket");

    if (connect(sock, (struct sockaddr *) &sa, sizeof(sa)) < 0)
     die("connect");

    return sock;
}
